corrected bp margins

--- a/src/config.json
+++ b/src/config.json
@@ -10,7 +10,7 @@
       "site": "",
       "title": "",
       "description": "",
-      "url": ""
+      "image": ""
     },
     "og": {
       "title": "",
