--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,8 @@
 {
   "options": {
-    "title": "Free AI Manifesto",
-    "author": "",
-    "description": "",
-    "copyright": "",
+    "title": "Decentralized AI Manifesto",
+    "description": "Multiple artificial intelligences must not be censored or controlled by anybody #freeai",
+    "copyright": "free",
     "email": "sign@manifesto.ai",
     "twitter": {
       "card": "",
