--- a/src/config.keybase.json
+++ b/src/config.keybase.json
@@ -1,6 +1,6 @@
 {
   "options": {
-    "title": "Decentralized AI Manifesto",
+    "title": "Sign via Keybase",
     "description": "Multiple artificial intelligences must not be censored or controlled by anybody #freeai",
     "copyright": "free",
     "email": "sign@manifesto.ai",
