--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "manifesto-ai",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Multiple artificial intelligences must not be censored or controlled by anybody",
   "private": true,
   "license": "MIT",
@@ -24,16 +24,18 @@
   "dependencies": {},
   "devDependencies": {
     "rimraf": "^2.6.2",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.0-alpha",
-    "copy-webpack-plugin": "^4.5.1",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
     "file-loader": "^1.1.11",
     "url-loader": "^1.0.1",
     "sass-loader": "^7.0.3",
-    "webpack": "^4.11.0",
-    "webpack-cli": "^3.0.2",
-    "webpack-dev-server": "^3.1.4"
+    "postcss-loader": "^2.1.6",
+    "autoprefixer": "^9.0.1",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
