--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "manifesto-ai",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Multiple artificial intelligences must not be censored or controlled by anybody",
   "private": true,
   "license": "MIT",
@@ -25,18 +25,18 @@
   "dependencies": {},
   "devDependencies": {
     "rimraf": "^2.6.2",
-    "css-loader": "^1.0.0",
-    "html-webpack-plugin": "^4.0.0-alpha",
-    "copy-webpack-plugin": "^4.5.2",
-    "mini-css-extract-plugin": "^0.4.3",
-    "node-sass": "^4.9.3",
-    "file-loader": "^2.0.0",
-    "url-loader": "^1.1.1",
-    "sass-loader": "^7.1.0",
-    "postcss-loader": "^3.0.0",
-    "autoprefixer": "^9.1.5",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.9"
+    "css-loader": "1.0.1",
+    "html-webpack-plugin": "4.0.0-alpha",
+    "copy-webpack-plugin": "4.6.0",
+    "mini-css-extract-plugin": "0.4.4",
+    "node-sass": "4.10.0",
+    "file-loader": "2.0.0",
+    "url-loader": "1.1.2",
+    "sass-loader": "7.1.0",
+    "postcss-loader": "3.0.0",
+    "autoprefixer": "9.3.1",
+    "webpack": "4.25.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10"
   }
 }
